5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1865_1540.log
== TEST (2019-07-04 10:27:17) 
-- CODE:
from math import*

p  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tg = x **(2*i)*(-1)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:22) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
f = 2
while(i < n):
	cos = 1 - x/factorial(f)
	i = i + 1
	
print(cos)
-- OUTPUT:
0.3831497249319151
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:08) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
e = -1**i
f = 2
while(i < n):
	z = -x**i/factorial(f)
	cos = 1 - x/factorial(f)
	i = i + 1
	f = f + 2
print(cos)



-- OUTPUT:
0.9982865270136998
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:53) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
e = -1**i
c = 1
f = 2
while(i < n):
	z = -x**c/factorial(f)
	cos = 1 - x/factorial(f)
	i = i + 1
	f = f + 2
	c = c + 1
print(cos)



-- OUTPUT:
0.9982865270136998
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:21) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
e = -1**i
c = 1
f = 2
while(i < n):
	z = -x**c/factorial(f)**e
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(cos)



-- OUTPUT:
-1350.9535534652716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:35) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
e = -1**i
c = 1
f = 2
while(i < n):
	z = -x**c/factorial(f)*e
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(cos)



-- OUTPUT:
1.0026079350954191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:13) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
e = -1**i
c = 1
f = 2
while(i < n):
	z = -x**c/factorial(f)*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(cos)



-- OUTPUT:
1.0026079350954191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:07) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
e = -1**i
c = 1
f = 2
while(i < n):
	z = -x**c/factorial(f)*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
1.002608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:35) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	z = -x**c/factorial(f)*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
1.002608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:17) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	z = (-x**c/factorial(f)*(-1**c))
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
1.002608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:06) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	z = (x**c/factorial(f)*(-1**c))
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.997392
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:39:18) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	z = (x**c/factorial(f)*(-1**c))
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- EXECUTION TIME:
1.02851
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.997392
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
0.619642
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:22) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
s = 1
c = 1
f = 2
while(i < n):
	z = (x**c/factorial(f)*(-1**s))
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
	s = -1 * s
print(round(cos,6))



-- OUTPUT:
0.997392
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:35) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
s = 1
c = 1
f = 2
while(i < n):
	z = (x**c/factorial(f)*(1**s))
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
	s = -1 * s
print(round(cos,6))



-- OUTPUT:
1.002608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:55) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
s = 1
c = 1
f = 2
while(i < n):
	z =  (x**c)/(factorial(f))*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
	s = -1 * s
print(round(cos,6))



-- OUTPUT:
0.997392
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:02) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	z =  (x**c)/(factorial(f))*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.997392
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:16) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	z =  (x**c)/(factorial(f))*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.997392
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:10) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	z =  (x**c)/(factorial(f))*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.997392
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:13) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z =  (x**c)/(d)*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.997392
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:26) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.997392
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:46:30) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- EXECUTION TIME:
0.677987
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.997392
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
0.619642
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:32) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c)
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.997392
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:14) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:24) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:39) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = 1 + (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(z,6))



-- OUTPUT:
2.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:05) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	cos = 1 + z
	i = i + 1
	f = f + 2
	c = c + 1
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:49) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:59) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:50:01) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- EXECUTION TIME:
0.592314
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.317124
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-4.384463
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.106257
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:50:06) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- EXECUTION TIME:
0.691178
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.317124
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-4.384463
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.106257
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:50:07) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:50:32) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
	cos = 1 + z
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:51:06) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:51:51) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:54) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
	cos = 1 + z
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:09) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = (x**c)/(d)*(-1**c) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- OUTPUT:
0.317124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:54:00) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = 1 -(x**c)/(d)*(-1**i) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- OUTPUT:
4.682876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:54:15) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = 1 -(x**c)/(d)*(-1**i) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(cos,6))



-- OUTPUT:
4.682876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:54:28) 
-- CODE:
from math import*

x  = eval(input("valor de pi:"))
n  = int(input("numero de termos:"))
i = 0
z = 0
c = 1
f = 2
while(i < n):
	d = factorial(f)
	z = 1 -(x**c)/(d)*(-1**i) + z
	i = i + 1
	f = f + 2
	c = c + 1
cos = 1 + z
print(round(z,6))



-- OUTPUT:
3.682876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
